<resources>
    <string name="app_name">GUTFollower</string>
    <string name="register"><u>Register</u></string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="delete_acc">Delete Account</string>
    <string name="record">Record</string>
    <string name="saved_tracks">Tracks</string>
    <string name="profile">Profile</string>
    <string name="noLocation">No location provided by gps</string>
    <string name="distance">Distance: </string>
    <string name="km">km</string>
    <string name="avg_speed">Avg. Speed: </string>
    <string name="km_h">km/h</string>
    <string name="time">Time: </string>
    <string name="no_tracks">No tracks saved so far... :(</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="start_recording">Start</string>
    <string name="stop">Stop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="empty_string" />
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_password">Edit password</string>
    <string name="edit_email">Edit email</string>
    <string name="track_distance">Distance (km)</string>
    <string name="track_avg_speed">Avg. Speed (km/h)</string>
    <string name="track_time_duration">Time Duration (h:m:s)</string>
    <string name="track_run_pace">Pace (min/km)</string>
    <string name="delete">Delete Track</string>
</resources>
