<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.track.TrackActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            xmlns:fab="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fab_menu"
            android:layout_gravity="right|bottom"
            fab:fab_labelStyle="@style/menu_labels_style"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/normal_mode"
                fab:fab_title="@string/normal"
                fab:fab_size="mini"
                fab:fab_icon="@drawable/ic_map_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/satellite_mode"
                fab:fab_title="@string/satellite"
                fab:fab_size="mini"
                fab:fab_icon="@drawable/ic_satellite_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/terrain_mode"
                fab:fab_title="@string/terrain"
                fab:fab_size="mini"
                fab:fab_icon="@drawable/ic_terrain_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </FrameLayout>

</LinearLayout>
