<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.main.userPanel.UserPanelFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/username"
                android:textStyle="bold|italic"
                android:textColor="@color/grey_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/username"
                android:textStyle="italic"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/email"
                    android:textStyle="bold|italic"
                    android:textColor="@color/grey_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/email"
                    android:textStyle="italic"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/email_edit"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_mode_edit_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/password"
                    android:textStyle="bold|italic"
                    android:textColor="@color/grey_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/password"
                    android:textStyle="italic"
                    android:inputType="textPassword"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/password_show"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/password_edit"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_remove_red_eye_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/password_edit"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_mode_edit_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_above="@+id/delete_btn"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/logout"
        android:id="@+id/logout_btn" />

    <Button
        android:backgroundTint="@color/red_light"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_acc"
        android:id="@+id/delete_btn" />

</RelativeLayout>
